samples/_failures_safe/1761093773_c33b27_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_4efbfd10.c: In function ‘main’:
./samples/SAFE/__tmp_4efbfd10.c:138: error: expected ‘}’ at end of input
./samples/SAFE/__tmp_4efbfd10.c:137:30: note: to match this ‘{’
  137 |     uint8_t sample_data3[] = {0x54, 0x65, 0x73, 0x74, 0
      |                              ^
./samples/SAFE/__tmp_4efbfd10.c:137:5: error: expected declaration or statement at end of input
  137 |     uint8_t sample_data3[] = {0x54, 0x65, 0x73, 0x74, 0
      |     ^~~~~~~
